# algebraic_immunity_utils

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs  main.rs  matrix.rs  restricted_ai.rs
