[package]
name = "algebraic_immunity_utils"
version = "1.6.0"
edition = "2021"
authors = ["LucaBonamino"]
license = "MIT"
description = "A Rust-based Python package"
homepage = "https://github.com/LucaBonamino/algebraic_immunity_utils"
repository = "https://github.com/LucaBonamino/algebraic_immunity_utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "algebraic_immunity_utils"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "^0.23.0"
ndarray = "0.15"
itertools = "0.10"

[profile.release]
opt-level = 3


