[build-system]
requires = ["maturin==0.12.20"]
build-backend = "maturin"

[project]
name = "algebraic_immunity_utils"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
