[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "algebraic_immunity_utils"
authors = [
    { name = "LucaBonamino"}
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]

[project.urls]
Homepage = "https://github.com/LucaBonamino/algebraic_immunity_utils"
Repository = "https://github.com/LucaBonamino/algebraic_immunity_utils"
